fix(datepicker): toggle clear button visibility; fix clear button style according to figma
#10

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -87,4 +87,7 @@
       width: 100%;
     }
   }
+  &_hidden {
+    visibility: hidden;
+  }
 }
